fix Serial